--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,16 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Instalar dependências
+        run: |
+          python -m pip install --upgrade pip
+          pip install flask
+
       - name: Rodar Gerador (build.py)
         run: python build.py
+
+      - name: Gerar traduções i18n
+        run: python i18n_service.py --all --languages en
 
       - name: Configurar Pages
         uses: actions/configure-pages@v5
