🚀 Atualizar workflow: Adicionar update-html.js ao pipeline de build
✅ Agora o deploy inclui:
1. build.py → Gera HTMLs do template
2. i18n_service.py → Traduz para EN
4. Deploy para GitHub Pages

Isso garante que TODAS as melhorias SEO sejam deployadas

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,17 @@ jobs:
       - name: Gerar traduções i18n
         run: python i18n_service.py --all --languages en
 
+      - name: Configurar Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Instalar dependências Node
+        run: npm install
+
+      - name: Aplicar melhorias SEO (CTAs + Internal Linking)
+        run: node update-html.js
+
       - name: Configurar Pages
         uses: actions/configure-pages@v5
 
